[package]
name = "bme680-zabbix_sender"
version = "0.1.0"
authors = ["William Desportes <williamdes@wdes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = "0.6.0"
embedded-hal = "0.2.6"
linux-embedded-hal = "0.3.0"
log = "0.4.14"
env_logger = "0.9.0"
zbx_sender = "0.2.2"
